# gtsam_playground

./: .gitmodules  CMakeLists.txt  Dockerfile
.devcontainer/: devcontainer.json  docker-compose.yml
src/: main.cpp
